# smoldata

./: Cargo.toml  README.md  build.rs  rustc-ice-2025-02-01T02_49_09-138312.txt  rustc-ice-2025-02-01T02_49_09-138313.txt  rustc-ice-2025-02-01T02_50_10-138546.txt  rustc-ice-2025-02-01T02_50_10-138547.txt  rustc-ice-2025-02-01T02_50_11-138578.txt  rustc-ice-2025-02-01T02_50_11-138579.txt  rustc-ice-2025-02-01T02_52_51-139095.txt  rustc-ice-2025-02-01T02_52_51-139096.txt  rustc-ice-2025-02-01T02_53_24-139394.txt  rustc-ice-2025-02-01T02_56_09-140129.txt  rustc-ice-2025-02-01T02_56_09-140130.txt
derive/: Cargo.toml
derive/src/: attributes.rs  codegen.rs  lib.rs  parsing.rs  processing.rs
src/: de.rs  lib.rs  macros.rs  main.rs  object.rs  raw.rs  reader.rs  ser.rs  str.rs  tag.rs  tests.rs  varint.rs  writer.rs
src/serde_impl/: ser.rs
