[package]
name = "smoldata"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "*" }
thiserror = "1.0.63"
smoldata_derive = { path = "derive" }

[dev-dependencies]
serde = { version = "*", features = ["derive"] }

[features]
default = [
    "no_dev_error_checks_on_release"
]

no_dev_error_checks_on_release = []
no_dev_error_checks = []