[package]
name = "smoldata"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.63"
smoldata_derive = { path = "derive" }

[features]
default = [
    "raw_value",
    "object_value",
    "no_dev_error_checks_on_release"
]

no_dev_error_checks_on_release = []
no_dev_error_checks = []
raw_value = []
object_value = []